# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint_and_pytest_check.yml
page_loader/: 1.py  classes.py  cli.py  dataclasses.py  downloaders.py  exceptions.py  file_handling.py  link_handling.py  loader.py  log_config.py  page_loader.py
page_loader/core/: cli.py  dataclasses.py  downloader.py  downloaders.py  exception_messages.py  file_handling.py  link_handling.py  url_handling.py
page_loader/lib/: cli.py  dataclasses.py  downloader.py  exception_messages.py  exceptions.py  file_handling.py  url_handling.py
page_loader/scripts/: page_loader.py  page_loader_script.py
tests/: conftest.py  test_page_loader.py
tests/fixtures/: fixture_css_stylesheet.css  fixture_for_img.html  fixture_for_link.html  fixture_for_script.html  fixture_page2.html  hexlet-courses-fixture  hexlet-courses-fixture.html  ru-hexlet-io-courses
