[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The utility downloads the 'page from the web and saves its html form to the specified path"
repository = "https://github.com/seeu359/python-project-51"
classifiers = ['?']
authors = ["seeu359 <a.ch3re359@yandex.ru>"]
packages = [
  { include = "page_loader" },
]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
furl = "^2.1.3"
progress = "^1.6"


[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
requests-mock = "^1.10.0"
pytest-cov = "^3.0.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"